# PCS-3D

./: CMakeLists.txt  README.md  bitbucket-pipelines.yml  main.cpp
Images/: ClassDiagramPolygon.md  ClassDiagramPolyhedron.md  ClassDiagramSegment.md  ClassDiagramVertex.md  classDiagram.md
gedim/: CMakeLists.txt
gedim/src/: CMakeLists.txt
gedim/src/core/: CMakeLists.txt
gedim/src/core/IO/: CMakeLists.txt  CsvExporter.hpp  InputPropertySupportedTypes.hpp  StringUtilities.hpp
gedim/src/core/common/: CMakeLists.txt
gedim/src/core/geometry/: CMakeLists.txt  GeometricObject.hpp  IPolygon.hpp  IPolyhedron.hpp  Intersector1D1D.cpp  Intersector1D1D.hpp  Intersector2D1D.cpp  Intersector2D1D.hpp  Intersector2D2D.cpp  Intersector2D2D.hpp  IntersectorPolygonLine.cpp  IntersectorPolygonLine.hpp  Polygon.cpp  Polygon.hpp  Polyhedron.hpp  Segment.cpp  Segment.hpp  Vertex.hpp
gedim/src/core/mpiTools/: CMakeLists.txt
pcs-3d-cb/: pcs-3d-cb.cbp
test/: CMakeLists.txt  ConcaveToConvex.cpp  ConcaveToConvex.hpp  geometryUnitTest.cpp  geometryUnitTest.hpp
